remove overflow hidden preventing use of location and recipe edit

--- a/share/css/layout.css
+++ b/share/css/layout.css
@@ -2,8 +2,6 @@
   height: 100%;
   width: auto; 
   margin: 0 auto;
-  max-height: 100vh;
-  overflow: hidden;
 
   .page-content-wrapper, 
   .page-header-wrapper {
